Optionally install Eclipse with Lombok