@@ -125,6 +125,20 @@
 		<property name="tomcat.dir" value="build/apache-tomcat-${tomcat.version}"/>
 		<property name="tomcat.connector.port" value="80"/>
 		<property name="tomcat.server.port" value="8005"/>
+		<property name="eclipse.version" value="2021-09"/>
+		<property name="eclipse.file" value="eclipse-jee-${eclipse.version}-R-win32-x86_64" if:true="${os.windows}"/>
+		<property name="eclipse.file" value="eclipse-jee-${eclipse.version}-R-linux-gtk-x86_64" if:true="${os.linux}"/>
+		<property name="eclipse.file" value="eclipse-jee-${eclipse.version}-R-macosx-cocoa-x86_64" if:true="${os.mac}"/>
+		<property name="eclipse.zip" value="${eclipse.file}.zip"/>
+		<property name="eclipse.tar" value="${eclipse.file}.tar"/>
+		<property name="eclipse.gz" value="${eclipse.tar}.gz"/>
+		<property name="eclipse.base.url" value="https://ftp.snt.utwente.nl/pub/software/eclipse/technology/epp/downloads/release/${eclipse.version}/R/"/>
+		<property name="eclipse.url" value="${eclipse.base.url}${eclipse.zip}" if:true="${os.windows}"/>
+		<property name="eclipse.url" value="${eclipse.base.url}${eclipse.gz}" unless:true="${os.windows}"/>
+		<property name="eclipse.dir" value="build/${eclipse.file}"/>
+		<property name="lombok.version" value="1.18.20"/>
+		<property name="lombok.jar" value="lombok-1.18.20.jar"/>
+		<property name="lombok.url" value="https://projectlombok.org/downloads/${lombok.jar}"/>
 		<property name="winmerge.version" value="2.16.6"/>
 		<property name="winmerge.zip" value="winmerge-${winmerge.version}-exe.zip"/>
 		<property name="winmerge.url" value="https://github.com/WinMerge/winmerge/releases/download/${winmerge.version}/${winmerge.zip}"/>
@@ -173,6 +187,11 @@
 		<available property="maven.dir.available" file="${maven.dir}"/>
 		<available property="tomcat.zip.available" file="download/${tomcat.zip}"/>
 		<available property="tomcat.dir.available" file="${tomcat.dir}"/>
+		<available property="eclipse.zip.available" file="download/${eclipse.zip}" if:true="${os.windows}"/>
+		<available property="eclipse.zip.available" file="download/${eclipse.gz}" unless:true="${os.windows}"/>
+		<available property="eclipse.dir.available" file="${eclipse.dir}"/>
+		<available property="lombok.jar.available" file="download/${lombok.jar}"/>
+		<available property="lombok.dir.available" file="${lombok.dir}"/>
 		<available property="winmerge.zip.available" file="download/${winmerge.zip}"/>
 		<available property="winmerge.dir.available" file="${winmerge.dir}"/>
 		<available property="ff.war.available" file="download/${ff.war}"/>
@@ -315,7 +334,7 @@
 		<condition property="frank.runner.up.to.date"><or><filesmatch file1="build.xml" file2="download/frank-runner/build.xml" textfile="true"/><not><resourceexists><file file="download/frank-runner/build.xml"/></resourceexists></not></or></condition>
 	</target>
 
-	<target name="build" depends="init,get.java,get.ant,get.maven,get.tomcat,get.winmerge,get.ff,get.jms,get.h2,get.ojdbc,get.mssql">
+	<target name="build" depends="init,get.java,get.ant,get.maven,get.tomcat,get.eclipse,get.lombok,get.winmerge,get.ff,get.jms,get.h2,get.ojdbc,get.mssql">
 		<!-- jdk -->
 		<unzip src="download/${jdk.zip}" dest="build" unless:set="jdk.dir.available" if:true="${os.windows}">
 			<patternset>
@@ -405,6 +424,18 @@
 		<delete><fileset dir="${tomcat.dir}/lib" includes="**-CUSTOM.jar"/></delete>
 		<available property="lib.server.dir.available" file="${projects.dir}/${project.dir}/${lib.server.dir}"/>
 		<copy todir="${tomcat.dir}/lib" if:set="lib.server.dir.available"><fileset dir="${projects.dir}/${project.dir}/${lib.server.dir}"/><globmapper from="*.jar" to="*-CUSTOM.jar"/></copy>
+		<!-- eclipse -->
+		<condition property="eclipse.and.os.windows"><and><istrue value="${eclipse}"/><istrue value="${os.windows}"/></and></condition>
+		<unzip src="download/${eclipse.zip}" dest="${eclipse.dir}" unless:set="eclipse.dir.available" if:true="${eclipse.and.os.windows}"><cutdirsmapper dirs="1"/></unzip>
+		<gunzip src="download/${eclipse.gz}" dest="build" unless:set="eclipse.dir.available" if:true="${eclipse}" unless:true="${os.windows}"/>
+		<untar src="build/${eclipse.tar}" dest="build" unless:set="maven.dir.available" if:true="${eclipse}" unless:true="${os.windows}"><cutdirsmapper dirs="1"/></untar>
+		<chmod file="${eclipse.dir}/eclipse" perm="+x" unless:set="maven.dir.available" if:true="${eclipse}" unless:true="${os.windows}"/>
+		<delete file="build/${eclipse.tar}" unless:set="eclipse.dir.available" if:true="${eclipse}" unless:true="${os.windows}"/>
+		<copy todir="${eclipse.dir}" file="download/${lombok.jar}" unless:set="eclipse.dir.available" if:true="${eclipse}"/>
+		<concat destfile="${eclipse.dir}/eclipse.ini" append="true" unless:set="eclipse.dir.available" if:true="${eclipse}">-javaagent:${lombok.jar}&#13;&#10;</concat>
+		<concat destfile="${eclipse.dir}/eclipse.ini" append="true" unless:set="eclipse.dir.available" if:true="${eclipse}">--illegal-access=warn&#13;&#10;</concat><!-- see https://stackoverflow.com/questions/69218106/eclipse-not-able-to-open-java-files-unable-to-make-protected-final-java-lang -->
+		<concat destfile="${eclipse.dir}/eclipse.ini" append="true" unless:set="eclipse.dir.available" if:true="${eclipse}">--add-opens java.base/java.lang=ALL-UNNAMED&#13;&#10;</concat>
+		<antcall target="cacerts" if:true="${eclipse}"><param name="jdk.dir" value="${eclipse.dir}/plugins/org.eclipse.justj.openjdk.hotspot.jre.full.win32.x86_64_16.0.2.v20210721-1149"/></antcall>
 		<!-- winmerge -->
 		<unzip src="download/${winmerge.zip}" dest="${winmerge.dir}" unless:set="winmerge.dir.available"/>
 		<!-- webapp -->
@@ -542,47 +573,55 @@
 		<antcall target="run"/>
 	</target>
 
-	<target name="get.java" unless="jdk.zip.available">
+	<target name="get.java" unless="${jdk.zip.available}">
 		<get src="${jdk.url.win}" dest="download/${jdk.zip}" verbose="on" if:true="${os.windows}"/>
 		<get src="${jdk.url.lin}" dest="download/${jdk.zip}" verbose="on" if:true="${os.linux}"/>
 		<get src="${jdk.url.mac}" dest="download/${jdk.zip}" verbose="on" if:true="${os.mac}"/>
 	</target>
 
-	<target name="get.ant" unless="ant.zip.available">
+	<target name="get.ant" unless="${ant.zip.available}">
 		<get src="${ant.zip.url}" dest="download/${ant.zip}" verbose="on" if:true="${os.windows}"/>
 		<get src="${ant.gz.url}" dest="download/${ant.gz}" verbose="on" unless:true="${os.windows}"/>
 	</target>
 
-	<target name="get.maven" unless="maven.zip.available">
+	<target name="get.maven" unless="${maven.zip.available}">
 		<get src="${maven.zip.url}" dest="download/${maven.zip}" verbose="on" if:true="${os.windows}"/>
 		<get src="${maven.gz.url}" dest="download/${maven.gz}" verbose="on" unless:true="${os.windows}"/>
 	</target>
 
-	<target name="get.tomcat" unless="tomcat.zip.available">
+	<target name="get.tomcat" unless="${tomcat.zip.available}">
 		<get src="${tomcat.url}" dest="download/${tomcat.zip}" verbose="on"/>
 	</target>
 
-	<target name="get.winmerge" unless="winmerge.zip.available">
+	<target name="get.eclipse" unless="${eclipse.zip.available}" if="${eclipse}">
+		<get src="${eclipse.url}" dest="download/${eclipse.zip}" verbose="on"/>
+	</target>
+
+	<target name="get.lombok" unless="${lombok.jar.available}">
+		<get src="${lombok.url}" dest="download/${lombok.jar}" verbose="on"/>
+	</target>
+
+	<target name="get.winmerge" unless="${winmerge.zip.available}">
 		<get src="${winmerge.url}" dest="download/${winmerge.zip}" verbose="on"/>
 	</target>
 
-	<target name="get.ff" unless="ff.war.available">
+	<target name="get.ff" unless="${ff.war.available}">
 		<get src="${ff.url}" dest="download/${ff.war}" verbose="on"/>
 	</target>
 
-	<target name="get.jms" unless="jms.jar.available">
+	<target name="get.jms" unless="${jms.jar.available}">
 		<get src="${jms.url}" dest="download/${jms.jar}" verbose="on"/>
 	</target>
 
-	<target name="get.h2" unless="h2.jar.available">
+	<target name="get.h2" unless="${h2.jar.available}">
 		<get src="${h2.url}" dest="download/${h2.jar}" verbose="on"/>
 	</target>
 
-	<target name="get.ojdbc" unless="ojdbc.jar.available">
+	<target name="get.ojdbc" unless="${ojdbc.jar.available}">
 		<get src="${ojdbc.url}" dest="download/${ojdbc.jar}" verbose="on"/>
 	</target>
 	
-	<target name="get.mssql" unless="mssql.jar.available">
+	<target name="get.mssql" unless="${mssql.jar.available}">
 		<get src="${mssql.url}" dest="download/${mssql.jar}" verbose="on"/>
 	</target>
 
@@ -604,7 +643,7 @@
 		</condition>
 		<copy file="${jdk.dir}/jre/lib/security/cacerts-orig" tofile="${jdk.dir}/jre/lib/security/cacerts" overwrite="true" if:set="cacerts.changed"/>
 		<delete dir="${jdk.dir}/jre/lib/security/cacerts-custom" if:set="cacerts.changed"/>
-		<apply executable="${jdk.dir}/bin/keytool" relative="true" vmlauncher="false" failonerror="true" if:set="cacerts.changed">
+		<apply executable="${jdk.dir}/jre/bin/keytool" relative="true" vmlauncher="false" failonerror="true" if:set="cacerts.changed">
 			<arg value="-noprompt"/>
 			<arg value="-storepass"/>
 			<arg value="changeit"/>
